# playing_with_h5cpp

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
